add config for sdk
